SERVER-32282 $textScore metadata is not removed in cases where RouterStagePipeline is optimized out on mongoS