src/mongo/s/query/cluster_client_cursor_impl.cpp
@@ -229,15 +229,10 @@ std::unique_ptr<RouterExecStage> buildPipelinePlan(executor::TaskExecutor* execu
                 opCtx, std::move(root), static_cast<DocumentSourceLimit*>(limit.get())->getLimit());
         }
     }
-    if (!params->sort.isEmpty()) {
-        // We are executing the pipeline without using a Pipeline, so we need to strip out any
-        // Document metadata ourselves. Note we only need this stage if there was a sort, since
-        // otherwise there would be no way for this half of the pipeline to require any metadata
-        // fields.
-        root = stdx::make_unique<RouterStageRemoveMetadataFields>(
-            opCtx, std::move(root), Document::allMetadataFieldNames);
-    }
-    return root;
+    // We are executing the pipeline without using an actual Pipeline, so we need to strip out any
+    // Document metadata ourselves.
+    return stdx::make_unique<RouterStageRemoveMetadataFields>(
+        opCtx, std::move(root), Document::allMetadataFieldNames);
 }
 }  // namespace
 
